--- a/manjaro/.config/kitty/kitty.conf
+++ b/manjaro/.config/kitty/kitty.conf
@@ -1,17 +1,16 @@
+include ./kitty-colors.conf
+
 font_family         FiraCode Nerd Font
 bold_font           FiraCode Nerd Font
 italic_font         FuraCode Nerd Font
 bold_italic_font    FuraCode Nerd Font
 
-font_size 11.1
+font_size 12
 
 scrollback_lines 15000
 disable_ligatures never
 
 placement_strategy center
-
-cursor #d65d0e
-cursor_text_color #f9f5d7
 
 open_url_with firefox
 
@@ -33,48 +32,3 @@ map kitty_mod+alt+.   move_tab_forward
 map kitty_mod+alt+,   move_tab_backward
 map kitty_mod+alt+n   set_tab_title
 
-background #f9f5d7
-foreground #3c3836
-selection_foreground #f9f5d7
-selection_background #3c3836
-# bg hard contrast
-color0 #f9f5d7
-# red
-color1 #cc241d
-# green
-color2 #98971a
-# yellow
-color3 #d79921
-# blue
-color4 #458588
-# purple
-color5 #b16286
-# aqua
-color6 #689d6a
-# dark gray
-color7 #7c6f64
-# light gray
-color8 #928374
-# dark red
-color9 #9d0006
-# dark green
-color10 #79740e
-# dark yellow
-color11 #b57614
-# dark blue
-color12 #076678
-# dark purple
-color13 #8f3f71
-# dark aqua
-color14 #427b58
-# fg
-color15 #3c3836
-# orange
-color16 #d65d0e
-# dark orange
-color17 #af3a03
-
-active_tab_foreground #f9f5d7
-active_tab_background #cc241d
-inactive_tab_foreground #3c3836
-inactive_tab_background #d5c4a1
