--- a/manjaro/.config/polybar/modules.ini
+++ b/manjaro/.config/polybar/modules.ini
@@ -32,6 +32,8 @@ label = %time%
 [module/filesystem]
 type = internal/fs
 mount-0 = /
+mount-1 = /home
+mount-2 = /mnt/sdc1
 fixed-values = true
 spacing = 0
 format-mounted = <label-mounted>
@@ -49,7 +51,7 @@ label = " %mb_used% | %mb_swap_used%"
 
 [module/network]
 type = internal/network
-interface = wlo1
+interface = wlp7s0
 interval = 1
 accumulate-stats = true
 unknown-as-up = true
