--- a/manjaro/.config/polybar/user_modules.ini
+++ b/manjaro/.config/polybar/user_modules.ini
@@ -3,32 +3,40 @@ type = custom/script
 exec = /home/efex/scripts/dropboxstatus.sh
 interval = 300
 click-left = /home/efex/scripts/dropboxstatus.sh --status &
-click-right = /home/efex/scripts/dropboxsyncmenu.sh
-click-middle = /home/efex/scripts/sysbackup.sh
+click-middle = /home/efex/scripts/dropboxsyncmenu.sh
+click-right = /home/efex/scripts/sysbackup.sh
 
 [module/rescuetimestatus]
 type = custom/script
 exec = /home/efex/scripts/rescuetimestatus.sh
 interval = 1500
 click-left = /home/efex/scripts/rescuetimestatus.sh --status &
-click-middle = /home/efex/scripts/rescuetimestatus.sh --reboot &
-click-right = /home/efex/scripts/rescuetimestatus.sh --off &
+click-middle = /home/efex/scripts/rescuetimestatus.sh --off &
+click-right = /home/efex/scripts/rescuetimestatus.sh --reboot &
 
 [module/xfluxstatus]
 type = custom/script
 exec = /home/efex/scripts/xfluxstatus.sh
 interval = 1500
 click-left = /home/efex/scripts/xfluxstatus.sh --status &
-click-right = /home/efex/scripts/xfluxstatus.sh --reboot &
 click-middle = /home/efex/scripts/xfluxstatus.sh --off &
+click-right = /home/efex/scripts/xfluxstatus.sh --reboot &
+
+[module/redshiftstatus]
+type = custom/script
+exec = /home/efex/scripts/redshiftstatus.sh
+interval = 1500
+click-left = /home/efex/scripts/redshiftstatus.sh --status &
+click-middle = /home/efex/scripts/redshiftstatus.sh --off &
+click-right = /home/efex/scripts/redshiftstatus.sh --reboot &
 
 [module/sinkswitch]
 type = custom/script
 exec = /home/efex/scripts/sinkswitch.sh
 interval = 1500
 click-left = /home/efex/scripts/sinkswitch.sh --speakers &
-click-right = /home/efex/scripts/sinkswitch.sh --headphones &
 click-middle = /home/efex/scripts/sinkswitch.sh --middle &
+click-right = /home/efex/scripts/sinkswitch.sh --headphones &
 
 [module/cpustatus]
 type = custom/script
