--- a/manjaro/.config/polybar/config.ini
+++ b/manjaro/.config/polybar/config.ini
@@ -10,7 +10,7 @@ override-redirect = false
 bottom = false
 fixed-center = true
 width = 100%
-height = 16
+height = 20
 offset-x = 0
 offset-y = 0
 background = ${color.bg}
@@ -19,17 +19,17 @@ radius-top = 0.0
 radius-bottom = 0.0
 overline-size = 2
 overline-color = ${color.ac}
-border-bottom-size = 4
+border-bottom-size = 5
 border-color = ${color.ac}
 padding = 1
 module-margin-left = 1
 module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
-font-1 = "FiraCode Nerd Font:size=11;3"
+font-1 = "FiraCode Nerd Font:size=12;3"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
 modules-left = i3
 modules-center = cpu memory network
-modules-right = filesystem date
+modules-right = redshiftstatus sinkswitch filesystem pulseaudio date
 separator =
 spacing = 0
 dim-value = 1.0
