--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,8 +91,8 @@ set-window-option -g mode-keys vi
 # bind -t vi-copy    WheelUpPane   page-up
 # bind -t vi-copy    WheelDownPane page-down
 
-# ## COLORSCHEME: gruvbox dark
-# set-option -g status "on"
+## COLORSCHEME: gruvbox dark
+set-option -g status "on"
 
 # # default statusbar color
 # set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
@@ -141,7 +141,7 @@ set-window-option -g mode-keys vi
 # set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
 
 # load default TMUX color scheme
-if-shell "test -f /home/efex/.tmux/lightline_insert" "source /home/efex/.tmux/lightline_insert"
+if-shell "test -f /home/efex/.tmux/lightline_visual" "source /home/efex/.tmux/lightline_visual"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -154,9 +154,9 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-net-speed'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @contiuum-restore 'on'
+# set -g @resurrect-strategy-nvim 'session'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @contiuum-restore 'on'
 
 # Initialize TMUX plugin manager
 run -b '/home/efex/.tmux/plugins/tpm/tpm'
