Restructured refs/ to be home for vimwiki

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -335,24 +335,29 @@ map ]     move_parent 1
 map [     move_parent -1
 map }     traverse
 
-map gh cd ~
-map gc cd ~/.config
-map gd cd /mnt/sdc1/dbx
+map gc cd ~/code
+map gC cd ~/.config
+map gd cd ~/dbx
 map gD cd ~/dwn
 map ge cd /etc
-map gu cd /usr
+map gh cd ~
 map gl cd -r .
 map gL cd -r %f
-map go cd /opt
-map gv cd /var
-map gV cd /dev
 map gm cd /media
 map gM cd /mnt
-map gs cd /srv
+map go cd /opt
 map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
+map gs cd /srv
+map gS cd ~/.local/share/nvim/swap
+map gu cd /usr
+map gv cd /var
+map gV cd /dev
+map gx cd ~/refs
+map gX cd ~/scripts
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+map g. cd ~/dots
 
 # External Programs
 map E  edit
