--- a/.config/kitty/kitty-dark.conf
+++ b/.config/kitty/kitty-dark.conf
@@ -15,6 +15,9 @@ inactive_tab_background #504945
 cursor #fe8019
 cursor_text_color #1d2021
 
+url_color #458588
+url_style curly
+
 # bg hard contrast
 color0 #282828
 
