--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,6 +9,7 @@ font_size 12
 
 scrollback_lines 15000
 disable_ligatures never
+strip_trailing_spaces smart
 
 placement_strategy center
 
@@ -31,4 +32,72 @@ map kitty_mod+o       close_tab
 map kitty_mod+alt+.   move_tab_forward
 map kitty_mod+alt+,   move_tab_backward
 map kitty_mod+alt+n   set_tab_title
+map kitty_mod+k       scroll_line_up
+map kitty_mod+j       scroll_line_down
+/* map kitty_mod+u       scroll_page_up */
+map kitty_mod+d       scroll_page_down
+map kitty_mod+home    scroll_home
+map kitty_mod+end     scroll_end
+map kitty_mod+h       show_scrollback
+map kitty_mod+enter   new_window
+map kitty_mod+w       close_window
+map kitty_mod+]       next_window
+map kitty_mod+[       previous_window
+map kitty_mod+f       move_window_forward
+map kitty_mod+b       move_window_backward
+map kitty_mod+`       move_window_to_top
+map kitty_mod+r       start_resizing_window
+# map kitty_mod+1       first_window
+# map kitty_mod+2       second_window
+# map kitty_mod+3       third_window
+# map kitty_mod+4       fourth_window
+# map kitty_mod+5       fifth_window
+# map kitty_mod+6       sixth_window
+# map kitty_mod+7       seventh_window
+# map kitty_mod+8       eighth_window
+# map kitty_mod+9       ninth_window
+# map kitty_mod+0       tenth_window
+map kitty_mod+equal     change_font_size all +2.0
+map kitty_mod+minus     change_font_size all -2.0
+map kitty_mod+backspace change_font_size all 0
 
+#: Select and act on visible text {{{
+
+#: Use the hints kitten to select text and either pass it to an
+#: external program or insert it into the terminal or copy it to the
+#: clipboard.
+
+# map kitty_mod+e kitten hints
+
+#: Open a currently visible URL using the keyboard. The program used
+#: to open the URL is specified in open_url_with.
+
+# map kitty_mod+p>f kitten hints --type path --program -
+
+#: Select a path/filename and insert it into the terminal. Useful, for
+#: instance to run git commands on a filename output from a previous
+#: git command.
+
+# map kitty_mod+p>shift+f kitten hints --type path
+
+#: Select a path/filename and open it with the default open program.
+
+# map kitty_mod+p>l kitten hints --type line --program -
+
+#: Select a line of text and insert it into the terminal. Use for the
+#: output of things like: ls -1
+
+# map kitty_mod+p>w kitten hints --type word --program -
+
+#: Select words and insert into terminal.
+
+# map kitty_mod+p>h kitten hints --type hash --program -
+
+#: Select something that looks like a hash and insert it into the
+#: terminal. Useful with git, which uses sha1 hashes to identify
+#: commits
+
+
+#: The hints kitten has many more modes of operation that you can map
+#: to different shortcuts. For a full description see kittens/hints.
+#: }}}
