--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -40,15 +40,15 @@ click-right = /home/efex/scripts/sinkswitch.sh --headphones &
 
 [module/cpustatus]
 type = custom/script
-exec = /home/efex/scripts/cpustatus.sh
+exec = /home/efex/scripts/cpustatus.sh --poly
 interval = 0.5
 
 [module/gpustatus]
 type = custom/script
-exec = /home/efex/scripts/gpustatus.sh
+exec = /home/efex/scripts/gpustatus.sh --poly
 interval = 0.5
 
 [module/fanstatus]
 type = custom/script
-exec = /home/efex/scripts/fanstatus.sh
+exec = /home/efex/scripts/fanstatus.sh --poly
 interval = 0.5
