--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,48 +19,46 @@
 # {{{ 0. Variables
 
 # caps lock key is used for most frequent actions
-set $mod3key Mod3
-set $mod3 bindsym Mod3
-set $smod3 bindsym Mod3+Shift
-set $cmod3 bindsym Mod3+Control
-set $scmod3 bindsym Mod3+Shift+Control
+set $mod3key    Mod3
+set $mod3       bindsym Mod3
+set $smod3      bindsym Mod3+Shift
+set $cmod3      bindsym Mod3+Control
+set $scmod3     bindsym Mod3+Shift+Control
 
 # windows key is used for deep management
-set $mod4key Mod4
-set $mod4 bindsym Mod4
-set $smod4 bindsym Mod4+Shift
-set $cmod4 bindsym Mod4+Control
-set $scmod4 bindsym Mod4+Shift+Control
+set $mod4key    Mod4
+set $mod4       bindsym Mod4
+set $smod4      bindsym Mod4+Shift
+set $cmod4      bindsym Mod4+Control
+set $scmod4     bindsym Mod4+Shift+Control
 
 # default terminal is suckless terminal
-set $terminal kitty
-
-# $ex volumeicon
-# bindsym $mod+Ctrl+m exec $terminal -e 'alsamixer'
-#$ex pulseaudio
-#$ex pa-applet
-#bindsym $mod+Ctrl+m exec pavucontrol
+set $terminal   kitty
 
 # set audio commands to easy variables
-set $volup XF86AudioRaiseVolume
-set $voldown XF86AudioLowerVolume
-set $mute XF86AudioMute
-set $playnext XF86AudioNext
-set $playprev XF86AudioPrev
-set $play XF86AudioPlay
-set $stop XF86AudioStop
+set $volup      XF86AudioRaiseVolume
+set $voldown    XF86AudioLowerVolume
+set $mute       XF86AudioMute
+set $playnext   XF86AudioNext
+set $playprev   XF86AudioPrev
+set $play       XF86AudioPlay
+set $stop       XF86AudioStop
 
 # set audio sinks and sources
-set $speakers alsa_output.pci-0000_0a_00.3.analog-stereo
-set $headphones alsa_output.usb-Logitech_Logitech_G430_Gaming_Headset-00.analog-stereo
-set $headmic alsa_input.usb-Logitech_Logitech_G430_Gaming_Headset-00.mono-fallback
-set $webcammic alsa_input.usb-Generic_FULL_HD_1080P_Webcam_200901010001-02.analog-stereo
+set $speakers \
+  alsa_output.pci-0000_0a_00.3.analog-stereo
+set $headphones \
+  alsa_output.usb-Logitech_Logitech_G430_Gaming_Headset-00.analog-stereo
+set $headmic \
+  alsa_input.usb-Logitech_Logitech_G430_Gaming_Headset-00.mono-fallback
+set $webcammic \
+  alsa_input.usb-Generic_FULL_HD_1080P_Webcam_200901010001-02.analog-stereo
 
 # clean up code
-set $ex exec --no-startup-id
-set $exa exec_always --no-startup-id
-set $br bindsym --release
-set $scr /home/efex/dots/scripts
+set $ex     exec --no-startup-id
+set $exa    exec_always --no-startup-id
+set $br     bindsym --release
+set $scr    /home/efex/dots/scripts
 
 # }}}
 # {{{ 1. System & Settings
@@ -79,8 +77,8 @@ popup_during_fullscreen smart
 workspace_auto_back_and_forth yes
 workspace_layout default
 default_orientation horizontal
-floating_minimum_size 750 x 500
-floating_maximum_size 1250 x 1000
+# floating_minimum_size 750 x 500
+# floating_maximum_size 1250 x 1000
 
 # reload the configuration file
 $mod4+c reload
@@ -98,9 +96,9 @@ $scmod3+0 $ex $scr/sysmenu.sh --menu
 $mod4+p $ex $scr/polybarstart.sh
 
 # volume changing
-bindsym $volup $ex pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym $voldown $ex pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym $mute $ex pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym $volup      $ex pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym $voldown    $ex pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym $mute       $ex pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # }}}
 # {{{ 2. Window Navigation & Management
@@ -134,9 +132,9 @@ $scmod3+k resize grow   height 25 px or 25 ppt
 $scmod3+l resize grow   width  25 px or 25 ppt
 
 # enter fullscreen mode for the focused container
-$mod3+f     fullscreen toggle
-$smod3+f    focus parent; fullscreen toggle
-$cmod3+f    focus parent; focus parent; fullscreen toggle
+$mod3+f                                               fullscreen toggle
+$smod3+f                                focus parent; fullscreen toggle
+$cmod3+f                  focus parent; focus parent; fullscreen toggle
 $scmod3+f   focus parent; focus parent; focus parent; fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
@@ -173,6 +171,11 @@ $mod3+3 workspace 3
 $mod3+4 workspace 4
 $mod3+5 workspace 5
 $mod3+6 workspace 6
+$mod3+7 workspace 7
+# $modX+Y workspace next
+# $modX+Y workspace next_on_output
+# $modX+Y workspace previous
+# $modX+Y workspace previous_on_output
 
 # move focused container to workspace
 $smod3+1 move container to workspace 1; workspace 1
@@ -181,17 +184,32 @@ $smod3+3 move container to workspace 3; workspace 3
 $smod3+4 move container to workspace 4; workspace 4
 $smod3+5 move container to workspace 5; workspace 5
 $smod3+6 move container to workspace 6; workspace 6
+$smod3+7 move container to workspace 7; workspace 7
+# $modX+Y move workspace next
+# $modX+Y move workspace next_on_output
+# $modX+Y move workspace previous
+# $modX+Y move workspace previous_on_output
 
 # scratchpad
 $mod3+slash     scratchpad show
 $smod3+slash    move scratchpad
 $cmod3+slash    [floating] move scratchpad
 
-# marks
-$mod3+braceleft     exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
-$mod3+braceright    exec i3-input -F 'swap container with mark %s' -l 1 -P 'Mark: '
-$mod3+semicolon     mark --add --toggle swapee
-$smod3+semicolon    swap container with mark swapee
+# mark window with name from your input
+$mod3+braceleft \
+  exec i3-input -F 'mark %s' -l 1 -P 'Mark: '
+
+# swap window with name from your input
+$mod3+braceright \
+  exec i3-input -F 'swap container with mark %s' -l 1 -P 'Mark: '
+
+# mark a window with 'swapee'
+$mod3+semicolon \
+  mark --add --toggle swapee
+
+# then swap another window with the marked window
+$smod3+semicolon \
+  swap container with mark swapee
 
 # }}}
 # {{{ 4. Application Management
@@ -211,44 +229,37 @@ $cmod4+b exec $terminal -e 'bmenu'
 # bindsym $mod+Shift+z $ex morc_menu
 
 # app launching
-$mod3+n         exec  $terminal ranger
-# $smod3+n        exec  nemo
-$mod3+w         exec  firefox
-$smod3+w        $ex   firefox-developer-edition
+$mod3+n           exec  $terminal ranger
+$mod3+w           exec  firefox
+$smod3+w          $ex   firefox-developer-edition
+$mod3+c           $ex   code
+$mod3+Return      $ex   $terminal
+$smod3+Return     exec  i3-sensible-terminal
+$mod3+t           $ex   $terminal
+$smod3+t          exec  i3-sensible-terminal
+$mod3+m           exec  $terminal htop
+$mod3+g           exec  google-chrome-stable
+$scmod4+l         $ex   xautolock -nowlocker blurlock
+$mod4+d           $ex   discord
+$mod4+s           $ex   slack
+$mod4+o           $ex   obs
+$mod4+i           $ex   zoom
+# $mod?+Ctrl+m    exec  $terminal -e 'alsamixer'
+# $mod4+f         exec  filezilla
+# $mod4+v         exec  virtualbox
+# $mod3+equal     exec  gnome-calculator
 # $scmod3+w       $ex   start-tor-browser
-$mod3+c         $ex   code
-$mod3+Return    $ex   $terminal
-$smod3+Return   exec  i3-sensible-terminal
-# $cmod3+Return   $ex   st
-# $mod4+Return    exec  gnome-text-editor
-$mod3+t         $ex   $terminal
-$smod3+t        exec  i3-sensible-terminal
 # $cmod3+t        $ex   st
 # $mod4+t         exec  gnome-text-editor
-$mod3+m         exec  $terminal htop
-$mod3+g         exec  google-chrome-stable
-# $scmod4+l       $ex blurlock
-$scmod4+l         $ex xautolock -nowlocker blurlock
-# $mod3+equal     exec  gnome-calculator
-# $mod4+equal     exec  gnome-calculator
-$mod4+d         $ex   discord
-# $mod4+f         exec  filezilla
-$mod4+s         $ex   slack
-# $mod4+v         exec  virtualbox
-$mod4+o         $ex   obs
+# $mod?+F3        exec pcmanfm
+# $smod?+F3       exec pcmanfm_pkexec
+# $mod?+F5        exec $terminal -e 'mocp'
+# $scmod?+h       exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
+# $mod?+Ctrl+x    --release $ex xkill
+# $mod4+m         $ex "vlc /home/efex/music/to-sort/current.xspf"
 
 # dunst test
 $mod4+u $ex "notify-send '.U. UwU :3'"
-
-# Start Applications
-# bindsym $mod+F3 exec pcmanfm
-# bindsym $mod+Shift+F3 exec pcmanfm_pkexec
-# bindsym $mod+F5 exec $terminal -e 'mocp'
-# bindsym $mod+Shift+Control+h exec xdg-open /usr/share/doc/manjaro/i3_help.pdf
-# bindsym $mod+Ctrl+x --release $ex xkill
-
-# launch music
-#$mod4+m $ex "vlc /home/efex/music/to-sort/current.xspf"
 
 # screenshots
 $br Mod3+Print \
@@ -261,7 +272,13 @@ $br Mod3+Control+Print \
 # }}}
 # {{{ 5. Scripts
 
-#### 
+$mod4+0 $ex $scr/date-alert.sh
+# syncswitch
+# general computer stats report
+# cpustatus (which is only temp/fan right now)
+# gpustatus
+# fanstatus
+# redshift
 
 # }}}
 # {{{ 8. Startup
@@ -283,27 +300,26 @@ $exa pactl set-sink-volume 0 '0%'
 $ex xset dpms 0 0 1200
 
 # autostart apps
-$exa    dunst
+$ex       $HOME/.fehbg
+$ex       sleep 10; $scr/sysbackup.sh
+$ex       /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+$ex       nm-applt
+$ex       xfce4-power-manager
+$ex       pamac-tray
+$ex       clipit
+$exa      dunst
+$exa      fix_xcursor
+$exa      redshift -c /home/efex/.config/redshift.conf
+$exa      $scr/polybarstart.sh
+# $ex     nitrogen --restore; sleep 1; compton -b
+# $ex     manjaro-hello
 # $ex     rescuetime
-# $ex     dropbox start
-$ex     $HOME/.fehbg
-$exa redshift -c /home/efex/.config/redshift.conf
-$exa    $scr/polybarstart.sh
-$ex     sleep 10; $scr/sysbackup.sh
-$ex /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# $ex nitrogen --restore; sleep 1; compton -b
-# $ex manjaro-hello
-$ex nm-applt
-$ex xfce4-power-manager
-$ex pamac-tray
-$ex clipit
-# $ex blueman-applet
-# $exa sbxkb
-# $ex start_conky_maia
-# $ex start_conky_green
-# $ex xautolock -time 30 -locker blurlock
-# $exa ff-theme-util
-$exa fix_xcursor
+# $ex     blueman-applet
+# $exa    sbxkb
+# $ex     start_conky_maia
+# $ex     start_conky_green
+# $ex     xautolock -time 30 -locker blurlock
+# $exa    ff-theme-util
 
 # set default workspaces
 workspace 1 output HDMI-A-0
@@ -312,6 +328,7 @@ workspace 3 output DisplayPort-1
 workspace 4 output HDMI-A-0
 workspace 5 output DisplayPort-0
 workspace 6 output DisplayPort-1
+workspace 7 output HDMI-A-0
 
 # window rules
 for_window [title="System Monitor"] border pixel 0
@@ -321,6 +338,7 @@ for_window [class="vlc"] border pixel 0
 for_window [class="Firefox"] border pixel 0
 for_window [class="discord"] floating enable
 for_window [class="Slack"] floating enable
+for_window [class="kitty" floating] resize set 250 250
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
@@ -354,6 +372,7 @@ for_window [class="Xfburn"] floating enable
 # }}}
 # {{{ X. Colors
 
+# pull in gruvbox colors
 set_from_resource $color0 color0 #ffffff
 set_from_resource $red color1 #ffffff
 set_from_resource $green color2 #ffffff
@@ -385,46 +404,147 @@ set_from_resource $fg2 fg2 #ffffff
 set_from_resource $fg3 fg3 #ffffff
 set_from_resource $fg4 fg4 #ffffff
 
-# class                 border      bg		      text		  ind.		    child_border
-client.focused          $dark-blue  $dark-blue      $bg		    $dark-blue     $dark-blue
-client.focused_inactive $fg2		    $fg2		    $bg		    $bg		      $bg
-client.unfocused        $bg4		    $bg4		    $bg		    $bg		      $bg
-client.urgent           $red		    $red		    $fg		    $red		    $red
-client.placeholder      $yellow		  $yellow		  $yellow	  $yellow	    $yellow
-
-client.background       #ffffff
+# class \
+#   border      bg		      text		  ind.		    child_border
+client.focused \
+    $dark-blue  $dark-blue  $bg       $dark-blue  $dark-blue
+client.focused_inactive \
+    $fg2        $fg2        $bg       $bg         $bg
+client.unfocused \
+    $bg4        $bg4        $bg       $bg         $bg
+client.urgent \
+    $red        $red        $fg       $red        $red
+client.placeholder \
+    $yellow     $yellow     $yellow   $yellow     $yellow
+client.background     #ffffff
 
 # }}}
 # {{{ Y. Modes
+# {{{ i3setup mode
 
-# i3setup mode
-set $mode_i3setup Deploy Layout: 4 panel (r) 2 panel (t) | Deploy Container: prime_a (a) prime_b (s) aside_a (d) aside_b (f)
+set $mode_i3setup Deploy Layout: (2)-panel (3)-panel (4)-panel | Deploy Container: prime_a (a) prime_b (s) aside_a (d) aside_b (f)
 
 $smod3+i mode "$mode_i3setup"
 
 mode "$mode_i3setup" {
+  # save layout: `i3-save-tree --workspace X > ~/.config/i3/layouts/temp.json`
   bindsym a $ex "kitty --class=kitty --name=hub -T=hub"
   bindsym s $ex "kitty --class=kitty --name=sub -T=sub"
   bindsym d $ex "kitty --class=kitty --name=box -T=box"
   bindsym f $ex "kitty --class=kitty --name=bar -T=bar"
-  bindsym r $ex "i3-msg 'append_layout /home/efex/.config/i3/layouts/4-panel-workflow.json'"
-  bindsym t $ex "i3-msg 'append_layout /home/efex/.config/i3/layouts/2-panel-workflow.json'"
+  # bindsym 1 $ex \
+  # "i3-msg 'append_layout /home/efex/.config/i3/layouts/1-panel-workflow.json'"
+  bindsym 2 $ex \
+    "i3-msg 'append_layout /home/efex/.config/i3/layouts/2-panel-workflow.json'"
+  bindsym 3 $ex \
+    "i3-msg 'append_layout /home/efex/.config/i3/layouts/3-panel-workflow.json'"
+  bindsym 4 $ex \
+    "i3-msg 'append_layout /home/efex/.config/i3/layouts/4-panel-workflow.json'"
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
 	$smod3+i mode "default"
 }
 
-# gaps mode
-set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
+# }}}
+# {{{ i3-resurrect mode
+
+# i3-resurrect config
+set $i3rez_save_config \
+  -d /home/efex/.config/i3/i3-resurrect --swallow=class,instance,title
+set $i3rez_restore_config \
+  -d /home/efex/.config/i3/i3-resurrect
+
+# general, save, and retore modes
+set $i3rez_mode \
+  Save (s) | Restore (r)
+set $i3rez_save \
+  Save WS (1) (2) (3) (4) (5) (6) (7)
+set $i3rez_restore \
+  Restore WS Apps (1) (2) (3) (4) (5) (6) (7) | \
+  Restore WS Layout (shift+) (1) (2) (3) (4) (5) (6) (7)
+
+$mod4+z mode $i3rez_mode
+
+mode "$i3rez_mode" {
+  bindsym s       mode "$i3rez_save"
+  bindsym r       mode "$i3rez_restore"
+  bindsym Return  mode "default"
+  bindsym Escape  mode "default"
+}
+
+# Save workspace mode.
+mode "$i3rez_save" {
+  bindsym 1 $ex "i3-resurrect save -w 1 $i3rez_save_config"
+  bindsym 2 $ex "i3-resurrect save -w 2 $i3rez_save_config"
+  bindsym 3 $ex "i3-resurrect save -w 3 $i3rez_save_config"
+  bindsym 4 $ex "i3-resurrect save -w 4 $i3rez_save_config"
+  bindsym 5 $ex "i3-resurrect save -w 5 $i3rez_save_config"
+  bindsym 6 $ex "i3-resurrect save -w 6 $i3rez_save_config"
+  bindsym 7 $ex "i3-resurrect save -w 7 $i3rez_save_config"
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+# Restore workspace mode.
+mode "$i3rez_restore" {
+  bindsym 1 $ex \
+    "i3-resurrect restore -w 1 $i3rez_restore_config --programs-only"
+  bindsym 2 $ex \
+    "i3-resurrect restore -w 2 $i3rez_restore_config --programs-only"
+  bindsym 3 $ex \
+    "i3-resurrect restore -w 3 $i3rez_restore_config --programs-only"
+  bindsym 4 $ex \
+    "i3-resurrect restore -w 4 $i3rez_restore_config --programs-only"
+  bindsym 5 $ex \
+    "i3-resurrect restore -w 5 $i3rez_restore_config --programs-only"
+  bindsym 6 $ex \
+    "i3-resurrect restore -w 6 $i3rez_restore_config --programs-only"
+  bindsym 7 $ex \
+    "i3-resurrect restore -w 7 $i3rez_restore_config --programs-only"
+
+  bindsym Shift+1 $ex \
+    "i3-resurrect restore -w 1 $i3rez_restore_config --layout-only"
+  bindsym Shift+2 $ex \
+    "i3-resurrect restore -w 2 $i3rez_restore_config --layout-only"
+  bindsym Shift+3 $ex \
+    "i3-resurrect restore -w 3 $i3rez_restore_config --layout-only"
+  bindsym Shift+4 $ex \
+    "i3-resurrect restore -w 4 $i3rez_restore_config --layout-only"
+  bindsym Shift+5 $ex \
+    "i3-resurrect restore -w 5 $i3rez_restore_config --layout-only"
+  bindsym Shift+6 $ex \
+    "i3-resurrect restore -w 6 $i3rez_restore_config --layout-only"
+  bindsym Shift+7 $ex \
+    "i3-resurrect restore -w 7 $i3rez_restore_config --layout-only"
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+# }}}
+# {{{ gaps mode
+
+set $mode_gaps \
+  Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, \
+        (t)op, (r)ight, (b)ottom, (l)eft
+set $mode_gaps_outer \
+  Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_inner \
+  Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_horiz \
+  Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_verti \
+  Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_top \
+  Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_right \
+  Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_bottom \
+  Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps_left \
+  Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
 
 $smod3+g mode "$mode_gaps"
 
@@ -545,6 +665,7 @@ mode "$mode_gaps_left" {
         bindsym Escape mode "default"
 }
 
+# }}}
 # }}}
 # {{{ Z. Overflow
 
