--- a/.config/kitty/kitty-light.conf
+++ b/.config/kitty/kitty-light.conf
@@ -15,6 +15,9 @@ inactive_tab_background #d5c4a1
 cursor #d65d0e
 cursor_text_color #f9f5d7
 
+url_color #458588
+url_style curly
+
 # bg hard contrast
 color0 #f9f5d7
 
