--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -25,15 +25,15 @@ padding = 1
 module-margin-left = 1
 module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
-font-1 = "FiraCode Nerd Font:size=12;3"
+font-1 = "FiraCode Nerd Font:size=12;2"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
-modules-left = i3
+modules-left = i3 cpustatus gpustatus fanstatus
 modules-center = cpu memory network
 modules-right = redshiftstatus sinkswitch filesystem pulseaudio date
 separator =
 spacing = 0
 dim-value = 1.0
-wm-name = 
+wm-name =
 locale = en_US.UTF-8
 tray-position = none
 tray-detached = false
@@ -53,8 +53,8 @@ scroll-down =
 double-click-left =
 double-click-middle =
 double-click-right =
-cursor-click = 
-cursor-scroll = 
+cursor-click =
+cursor-scroll =
 
 [settings]
 throttle-output = 5
@@ -66,8 +66,8 @@ compositing-foreground = over
 compositing-overline = over
 compositing-underline = over
 compositing-border = over
-format-foreground = 
-format-background = 
+format-foreground =
+format-background =
 format-underline =
 format-overline =
 format-spacing =
