--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 refs/private
 scripts/private
+.config/i3/i3-resurrect
+.config/nvim/plugged
+.config/ranger/__pycache__
+.config/ranger/plugins
+.config/todo/.actions.d
+.config/todo/todo_description.png
