--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,7 +29,7 @@ font-1 = "FiraCode Nerd Font:size=12;2"
 font-2 = "TerminessTTF Nerd Font:size=12;2"
 modules-left = i3 cpustatus gpustatus fanstatus
 modules-center = cpu memory network
-modules-right = redshiftstatus sinkswitch filesystem pulseaudio date
+modules-right = rescuetimestatus redshiftstatus sinkswitch filesystem pulseaudio date
 separator =
 spacing = 0
 dim-value = 1.0
