--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -34,7 +34,7 @@ map kitty_mod+alt+,   move_tab_backward
 map kitty_mod+alt+n   set_tab_title
 map kitty_mod+k       scroll_line_up
 map kitty_mod+j       scroll_line_down
-/* map kitty_mod+u       scroll_page_up */
+map kitty_mod+u       scroll_page_up
 map kitty_mod+d       scroll_page_down
 map kitty_mod+home    scroll_home
 map kitty_mod+end     scroll_end
